--- a/templates/index.html
+++ b/templates/index.html
@@ -9,6 +9,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Upgrade 2</h1>
+    <h1 style="color: green;">Successsss!!!!!!!</h1>
 </body>
 </html>
